--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
   "description": "Backend do Projeto GeoMundo da Disciplina de Engenharia de Software",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "knex": "^3.1.0",
+    "pg": "^8.13.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
