--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "knex": "^3.1.0",
     "pg": "^8.13.3"
   },
