chore(backend): instalação e configuração do cors

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "description": "Backend do Projeto GeoMundo da Disciplina de Engenharia de Software",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
