--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "Backend do Projeto GeoMundo da Disciplina de Engenharia de Software",
   "dependencies": {
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
