--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "leaflet": "^1.9.4",
+    "osmtogeojson": "^3.0.0-beta.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.15"
